Resolved align inputs in recebimentos menu

--- a/WebContent/assets/sass/v1/main.scss
+++ b/WebContent/assets/sass/v1/main.scss
@@ -11464,7 +11464,7 @@ tr.card-product-line {
 }
 .rcDatepicker {
     position: relative;
-    top: 2px;
+    top: -3px;
 }
 
 .rcDatepicker input{
